--- a/app/index.html
+++ b/app/index.html
@@ -33,21 +33,122 @@
 					<button class="button"> <img class="button__pic" src="./img/favicon.ico">Купить в один клик!</button>
 					<div class="content-shop">
 						<div class="content-shop__item">
-							<div class="icon-star"><img class="icon" src="./img/star.svg">Низкие цены</div>
+							<div class="icon-star"><img class="icon" src="./img/star.svg">
+								<p class="content__text">Низкие цены</p>
+							</div>
 						</div>
 						<div class="content-shop__item">
-							<div class="icon-star"><img class="icon" src="./img/star.svg">Доставка УкрПочтой бесплатно   </div>
+							<div class="icon-star"><img class="icon" src="./img/star.svg">
+								<p class="content__text">Доставка УкрПочтой бесплатно   </p>
+							</div>
 						</div>
 						<div class="content-shop__item">
-							<div class="icon-star"><img class="icon" src="./img/star.svg">Большой выбор   </div>
+							<div class="icon-star"><img class="icon" src="./img/star.svg">
+								<p class="content__text">Большой выбор   </p>
+							</div>
 						</div>
 						<div class="content-shop__item">
-							<div class="icon-star"><img class="icon" src="./img/star.svg">Все размеры      </div>
+							<div class="icon-star"><img class="icon" src="./img/star.svg">
+								<p class="content__text">Все размеры </p>
+							</div>
 						</div>
 					</div>
 				</div>
-				<div class="submain">Content</div>
-				<div class="footer">Footer Footer Footer Footer Footer Footer Footer FooterFooter Footer Footer Footer Footer Footer Footer FooterFooter Footer Footer Footer Footer Footer Footer FooterFooter Footer Footer Footer Footer Footer Footer FooterFooter Footer Footer Footer Footer Footer Footer FooterFooter Footer Footer Footer Footer Footer Footer FooterFooter Footer Footer Footer Footer Footer Footer Footer</div>
+				<h3 class="title__subname">Купальники                     </h3>
+				<div class="submain">               
+					<div class="section">
+						<div class="section__shop"><img class="section__pic" src="http://placekitten.com/g/250/250">
+							<p class="section__price">330 грн.</p>
+							<p class="section__price_nonprice">660 грн.</p>
+							<button class="button_price">Подробнее</button>
+						</div>
+						<div class="section__shop"><img class="section__pic" src="http://placekitten.com/g/250/250">
+							<p class="section__price">330 грн.</p>
+							<p class="section__price_nonprice">660 грн.</p>
+							<button class="button_price">Подробнее</button>
+						</div>
+						<div class="section__shop"><img class="section__pic" src="http://placekitten.com/g/250/250">
+							<p class="section__price">330 грн.</p>
+							<p class="section__price_nonprice">660 грн.</p>
+							<button class="button_price">Подробнее</button>
+						</div>
+						<div class="section__shop"><img class="section__pic" src="http://placekitten.com/g/250/250">
+							<p class="section__price">330 грн.</p>
+							<p class="section__price_nonprice">660 грн.</p>
+							<button class="button_price">Подробнее</button>
+						</div>
+					</div>
+					<div class="section">       
+						<div class="section__shop"><img class="section__pic" src="http://placekitten.com/g/250/250">
+							<p class="section__price">330 грн.</p>
+							<p class="section__price_nonprice">660 грн.</p>
+							<button class="button_price">Подробнее</button>
+						</div>
+						<div class="section__shop"><img class="section__pic" src="http://placekitten.com/g/250/250">
+							<p class="section__price">330 грн.</p>
+							<p class="section__price_nonprice">660 грн.</p>
+							<button class="button_price">Подробнее</button>
+						</div>
+						<div class="section__shop"><img class="section__pic" src="http://placekitten.com/g/250/250">
+							<p class="section__price">330 грн.</p>
+							<p class="section__price_nonprice">660 грн.</p>
+							<button class="button_price">Подробнее</button>
+						</div>
+						<div class="section__shop"><img class="section__pic" src="http://placekitten.com/g/250/250">
+							<p class="section__price">330 грн.</p>
+							<p class="section__price_nonprice">660 грн.</p>
+							<button class="button_price">Подробнее</button>
+						</div>
+					</div>
+					<div class="section">
+						<div class="section__shop"><img class="section__pic" src="http://placekitten.com/g/250/250">
+							<p class="section__price">330 грн.</p>
+							<p class="section__price_nonprice">660 грн.</p>
+							<button class="button_price">Подробнее</button>
+						</div>
+						<div class="section__shop"><img class="section__pic" src="http://placekitten.com/g/250/250">
+							<p class="section__price">330 грн.</p>
+							<p class="section__price_nonprice">660 грн.</p>
+							<button class="button_price">Подробнее</button>
+						</div>
+						<div class="section__shop"><img class="section__pic" src="http://placekitten.com/g/250/250">
+							<p class="section__price">330 грн.</p>
+							<p class="section__price_nonprice">660 грн.</p>
+							<button class="button_price">Подробнее</button>
+						</div>
+						<div class="section__shop"><img class="section__pic" src="http://placekitten.com/g/250/250">
+							<p class="section__price">330 грн.</p>
+							<p class="section__price_nonprice">660 грн.</p>
+							<button class="button_price">Подробнее </button>
+						</div>
+					</div>
+				</div>
+				<div class="second-section"> 
+					<p class="second-section__text">Создай свой неповторимый образ!</p>
+				</div>
+				<div class="third-section">
+					<div class="third-section__wrapper">
+						<h2 class="title__third">Доставка и оплата</h2>
+						<p class="paragraph">Оплата online картами VISA, MasterCard.</p>
+						<p class="paragraph">Доставка осуществляется УкрПочтой бесплатно. После оплаты товара мы отправляем Ваш заказ ценной бандеролью 1-го класса.</p>
+						<p class="paragraph">Наш магазин всегда идет на встречу клиентам и решает все возникшие вопросы. Будьте уверены, что Вы не останетесь наедине со своей проблемой, мы обязательно ее решим за Вас.</p>
+						<h2 class="title__third">Об интернет-магазине</h2>
+						<p class="paragraph">Мы рады приветствовать Вас в нашем интернет-магазине!</p>
+						<p class="paragraph">Каждая женщина может почувствовать себя уникальной, может дополнить свой образ изысканными украшениями и создать свой индивидуальный и неповторимый стиль. Все изделия изготавливаются вручную, каждое изделие становится шедевром. Используемые материалы - серебро 925 пробы, муранское стекло, эмаль, кожа, драгоценные и искусственные камни.</p>
+						<p class="paragraph">Любой браслет может быть прекрасным подарком, большой ассортимент дает возможность сделать отличный выбор на любой вкус и по самым низким ценам.                                       </p>
+					</div>
+				</div>
+				<div class="footer">
+					<h2 class="title-footer">Купальники</h2>
+					<p class="foot">The Picantini Website may be linked to the websites of such other parties</p>
+					<ul class="contacts">
+						<li class="contacts-item">vintorp.ua@gmail.com +3 8 066 841 18 92 </li>
+						<li class="contacts-item">Пн-Пт с 9:00 -19:00</li>
+						<li class="contacts-item">Сб с 10:00 - 18:00</li>
+						<li class="contacts-item">Вс выходной</li>
+						<li class="contacts-item">Киев, ул. Мечникова, 2 БЦ "Парус"</li>
+					</ul>
+				</div>
 			</div>
 		</div>
 	</body>
