--- a/app/_template.html
+++ b/app/_template.html
@@ -9,12 +9,12 @@
 		<meta content="ie=edge" http-equiv="x-ua-compatible">
 		<link rel="icon" href="./img/favicon.ico" type="image/png">
 		<link rel="shortcut icon" href="./img/favicon.ico" type="image/png">
-		<link rel="stylesheet" href="./css/style.min.css">
-		<link rel="stylesheet" href="./css/fotorama.css">
+		<link rel="stylesheet" href="css/style.min.css">
+		<link rel="stylesheet" href="css/fotorama.css">
 	</head>
 	<body>
 	</body>
-	<script src="./js/fotorama.js" async> </script>
+	<script src="js/fotorama.js" async> </script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"><!--[if lt IE 9]>
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script><![endif]-->  
