--- a/app/index.html
+++ b/app/index.html
@@ -71,11 +71,11 @@
 									<div id="slides">
 										<div id="overflow">
 											<div class="inner">
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
 											</div>
 										</div>
 									</div>
@@ -110,11 +110,11 @@
 									<div id="slides">
 										<div id="overflow">
 											<div class="inner">
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
 											</div>
 										</div>
 									</div>
@@ -149,11 +149,11 @@
 									<div id="slides">
 										<div id="overflow">
 											<div class="inner">
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
 											</div>
 										</div>
 									</div>
@@ -188,11 +188,11 @@
 									<div id="slides">
 										<div id="overflow">
 											<div class="inner">
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
 											</div>
 										</div>
 									</div>
@@ -229,11 +229,11 @@
 									<div id="slides">
 										<div id="overflow">
 											<div class="inner">
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
 											</div>
 										</div>
 									</div>
@@ -268,11 +268,11 @@
 									<div id="slides">
 										<div id="overflow">
 											<div class="inner">
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
 											</div>
 										</div>
 									</div>
@@ -307,11 +307,11 @@
 									<div id="slides">
 										<div id="overflow">
 											<div class="inner">
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
 											</div>
 										</div>
 									</div>
@@ -346,11 +346,11 @@
 									<div id="slides">
 										<div id="overflow">
 											<div class="inner">
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
 											</div>
 										</div>
 									</div>
@@ -387,11 +387,11 @@
 									<div id="slides">
 										<div id="overflow">
 											<div class="inner">
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
 											</div>
 										</div>
 									</div>
@@ -426,11 +426,11 @@
 									<div id="slides">
 										<div id="overflow">
 											<div class="inner">
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
 											</div>
 										</div>
 									</div>
@@ -465,11 +465,11 @@
 									<div id="slides">
 										<div id="overflow">
 											<div class="inner">
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
 											</div>
 										</div>
 									</div>
@@ -504,11 +504,11 @@
 									<div id="slides">
 										<div id="overflow">
 											<div class="inner">
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
-												<div class="page"><img src="http://placehold.it/588x250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
+												<div class="page"><img src="http://placekitten.com/g/588/250" alt=""></div>
 											</div>
 										</div>
 									</div>
