--- a/app/slider.html
+++ b/app/slider.html
@@ -8,11 +8,11 @@
 	<div id="slides">
 		<div id="overflow">
 			<div class="inner">
-				<div class="page"><img src="http://placehold.it/588x250" alt=""/></div>
-				<div class="page"><img src="http://placehold.it/588x250" alt=""/></div>
-				<div class="page"><img src="http://placehold.it/588x250" alt=""/></div>
-				<div class="page"><img src="http://placehold.it/588x250" alt=""/></div>
-				<div class="page"><img src="http://placehold.it/588x250" alt=""/></div>
+				<div class="page"><img src="http://placekitten.com/g/588/250" alt=""/></div>
+				<div class="page"><img src="http://placekitten.com/g/588/250" alt=""/></div>
+				<div class="page"><img src="http://placekitten.com/g/588/250" alt=""/></div>
+				<div class="page"><img src="http://placekitten.com/g/588/250" alt=""/></div>
+				<div class="page"><img src="http://placekitten.com/g/588/250" alt=""/></div>
 			</div>
 		</div>
 	</div>
