--- a/app/index.html
+++ b/app/index.html
@@ -559,6 +559,7 @@
 						</ul>
 					</div>
 				</div>
+				<div class="fotorama"><img src="http://s.fotorama.io/1.jpg"><img src="http://s.fotorama.io/2.jpg"></div>
 			</div>
 		</div>
 	</body>
