--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
 		<link rel="icon" href="./img/favicon.ico" type="image/png">
 		<link rel="shortcut icon" href="./img/favicon.ico" type="image/png">
 		<link rel="stylesheet" href="css/style.min.css">
-		<link href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
 	</head>
 	<body>
 		<div class="wrapper">
