--- a/app/popup.html
+++ b/app/popup.html
@@ -1,35 +1,4 @@
 
 <div class="popup">   
-	<div id="slider">
-		<input id="slide1" type="radio" name="slider" checked=""/>
-		<input id="slide2" type="radio" name="slider"/>
-		<input id="slide3" type="radio" name="slider"/>
-		<input id="slide4" type="radio" name="slider"/>
-		<input id="slide5" type="radio" name="slider"/>
-		<div id="slides">
-			<div id="overflow">
-				<div class="inner">
-					<div class="page"><img src="http://placekitten.com/g/588/250" alt=""/></div>
-					<div class="page"><img src="http://placekitten.com/g/588/250" alt=""/></div>
-					<div class="page"><img src="http://placekitten.com/g/588/250" alt=""/></div>
-					<div class="page"><img src="http://placekitten.com/g/588/250" alt=""/></div>
-					<div class="page"><img src="http://placekitten.com/g/588/250" alt=""/></div>
-				</div>
-			</div>
-		</div>
-		<div id="controls">
-			<label for="slide1"></label>
-			<label for="slide2"></label>
-			<label for="slide3"></label>
-			<label for="slide4"></label>
-			<label for="slide5"></label>
-		</div>
-		<div id="active">
-			<label for="slide1"></label>
-			<label for="slide2"></label>
-			<label for="slide3"></label>
-			<label for="slide4"></label>
-			<label for="slide5"></label>
-		</div>
-	</div><a class="close" title="Закрыть" href="#close"></a>
+	<div class="fotorama" data-allowfullscreen="native" data-nav="thumbs" data-loop="true" data-autoplay="true"><img src="./img/girl.jpg"/><img src="./img/wear.jpg"/><img src="./img/girl.jpg"/><img src="./img/wear.jpg"/><img src="./img/girl.jpg"/><img src="./img/wear.jpg"/><img src="./img/girl.jpg"/><img src="./img/wear.jpg"/><img src="./img/girl.jpg"/></div><a class="close" title="Закрыть" href="#close"></a>
 </div>
