--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
 		<div class="wrapper">
 			<div class="container">
 				<div class="header"> 
-					<h2 class="title">Купальники</h2>
+					<h2 class="title"> <a class="menu__link">Купальники                </a></h2>
 					<ul class="menu__list">
 						<li class="menu__item"><a class="navigation-link" href="#one">Купальники</a></li>
 						<li class="menu__item"><a class="navigation-link" href="#two">О нас</a></li>
@@ -160,16 +160,20 @@
 					</div>
 				</div>
 				<div class="second-section" id="two">
-					<svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 1200 600" width="1200px" height="600px" preserveaspectratio="xMidYMid slice">
-						<defs>
-							<mask id="mask" x="0" y="0" width="1200" height="600">
-								<rect x="0" y="0" width="1200" height="600"></rect>
-								<text x="560" y="200">Создай свой</text>
-								<text x="560" y="300">неповторимый образ!   </text>
-							</mask>
-						</defs>
-						<rect x="0" y="0" width="1200" height="600"></rect>
-					</svg><img src="./img/sea.jpg">
+					<div class="backgrounds">                   
+						<div class="background layer-3">
+							<div class="head"></div>
+						</div>
+						<div class="background layer-2">
+							<div class="head"></div>
+						</div>
+						<div class="background layer-1">
+							<div class="head">     </div>
+							<div class="text__section">
+								<p>Создай свой<br>неповторимый образ!<br></p>
+							</div><img class="img__section" src="./img/wear2.png">
+						</div>
+					</div>
 				</div>
 				<div class="third-section">
 					<div class="third-section__wrapper" id="three">
@@ -189,8 +193,7 @@
 						<p class="foot">Сайт разработан командой TookieTookie</p>
 						<ul class="contacts">
 							<li class="contacts-item">vintorp.ua@gmail.com +3 8 066 841 18 92 </li>
-							<li class="contacts-item">Пн-Пт с 9:00 -19:00</li>
-							<li class="contacts-item">Сб с 10:00 - 18:00</li>
+							<li class="contacts-item">Пн-Пт с 9:00 -19:00, Сб с 10:00 - 18:00                        </li>
 							<li class="contacts-item">Вс выходной</li>
 							<li class="contacts-item">Киев, ул. Мечникова, 2 БЦ "Парус"</li>
 						</ul>
