--- a/app/popup.html
+++ b/app/popup.html
@@ -1,4 +1,32 @@
 
-<div class="popup">   
+<div class="popup"> 
+	<div class="popup__wear">
+		<h3 class="title__name title__name_dark">Интернет-магазин купальников</h3>
+		<p class="section__price section__price_popup">330 грн.</p>
+		<p class="section__price_nonprice">660 грн.   </p>
+		<p class="section__description">Браслет серебряный; вид цепочки - змейка; камни - кубический цирконий; подвески-шарм из серебра с муранским стеклом</p>
+		<p class="section__description">Доставка осуществляется УкрПочтой бесплатно.</p>
+		<p class="section__par">Размеры</p>
+		<ul class="section__name"> 
+			<li class="section__item">S        </li>
+			<li class="section__item">M        </li>
+			<li class="section__item">L        </li>
+			<li class="section__item">XL</li>
+		</ul>
+		<ul class="section__name">
+			<li class="section__item"> 
+				<button class="button__section"> <img class="button__pic" src="./img/favicon.ico"/>Купить!</button>
+			</li>
+			<li class="section__item"> 
+				<button class="button__section"> <img class="button__pic" src="./img/favicon.ico"/>Купить!  </button>
+			</li>
+			<li class="section__item"> 
+				<button class="button__section"> <img class="button__pic" src="./img/favicon.ico"/>Купить!  </button>
+			</li>
+			<li class="section__item"> 
+				<button class="button__section"> <img class="button__pic" src="./img/favicon.ico"/>Купить!                      </button>
+			</li>
+		</ul>
+	</div>
 	<div class="fotorama" data-allowfullscreen="native" data-nav="thumbs" data-loop="true" data-autoplay="true"><img src="./img/girl.jpg"/><img src="./img/wear.jpg"/><img src="./img/girl.jpg"/><img src="./img/wear.jpg"/><img src="./img/girl.jpg"/><img src="./img/wear.jpg"/><img src="./img/girl.jpg"/><img src="./img/wear.jpg"/><img src="./img/girl.jpg"/></div><a class="close" title="Закрыть" href="#close"></a>
 </div>
