--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
 					<h3 class="title__name">Интернет-магазин купальников</h3>
 					<h1 class="title__big">
 						 Стильные купальники <br>для незабываемого отдыха</h1>
-					<h2 class="title__small">Лучшие купальники по самым лучшим ценам!</h2>
+					<h2 class="title__small">Купальники по самым лучшим ценам!</h2>
 					<button class="button"> <img class="button__pic" src="./img/favicon.ico">Купить в один клик!</button>
 					<div class="content-shop">
 						<div class="content-shop__item">
@@ -37,7 +37,7 @@
 							<p class="content__text">Низкие цены</p>
 						</div>
 						<div class="content-shop__item">
-							<div class="icon-star"><img class="icon" src="./img/star.svg"></div>
+							<div class="icon-star_iconed"><img class="icon" src="./img/star.svg"></div>
 							<p class="content__text">Доставка УкрПочтой бесплатно   </p>
 						</div>
 						<div class="content-shop__item">
