--- a/app/popup.html
+++ b/app/popup.html
@@ -1,32 +1,32 @@
 
 <div class="popup"> 
 	<div class="popup__wear">
-		<h3 class="title__name title__name_dark">Интернет-магазин купальников</h3>
-		<p class="section__price section__price_popup">330 грн.</p>
-		<p class="section__price_nonprice">660 грн.   </p>
+		<h3 class="title__name title__name_dark">Купальник San-Marino</h3>
 		<p class="section__description">Браслет серебряный; вид цепочки - змейка; камни - кубический цирконий; подвески-шарм из серебра с муранским стеклом</p>
-		<p class="section__description">Доставка осуществляется УкрПочтой бесплатно.</p>
-		<p class="section__par">Размеры</p>
-		<ul class="section__name"> 
-			<li class="section__item">S        </li>
-			<li class="section__item">M        </li>
-			<li class="section__item">L        </li>
-			<li class="section__item">XL</li>
-		</ul>
-		<ul class="section__name">
-			<li class="section__item"> 
-				<button class="button__section"> <img class="button__pic" src="./img/favicon.ico"/>Купить!</button>
-			</li>
-			<li class="section__item"> 
-				<button class="button__section"> <img class="button__pic" src="./img/favicon.ico"/>Купить!  </button>
-			</li>
-			<li class="section__item"> 
-				<button class="button__section"> <img class="button__pic" src="./img/favicon.ico"/>Купить!  </button>
-			</li>
-			<li class="section__item"> 
-				<button class="button__section"> <img class="button__pic" src="./img/favicon.ico"/>Купить!                      </button>
-			</li>
-		</ul>
 	</div>
-	<div class="fotorama" data-allowfullscreen="native" data-nav="thumbs" data-loop="true" data-autoplay="true"><img src="./img/girl.jpg"/><img src="./img/wear.jpg"/><img src="./img/girl.jpg"/><img src="./img/wear.jpg"/><img src="./img/girl.jpg"/><img src="./img/wear.jpg"/><img src="./img/girl.jpg"/><img src="./img/wear.jpg"/><img src="./img/girl.jpg"/></div><a class="close" title="Закрыть" href="#close"></a>
+	<div class="fotorama" data-width="100%" data-minwidth="320" data-maxwidth="820" data-maxheight="300" data-allowfullscreen="native" data-nav="thumbs" data-loop="true" data-autoplay="true"><img src="./img/girl.jpg"/><img src="./img/wear.jpg"/><img src="./img/girl.jpg"/><img src="./img/wear.jpg"/><img src="./img/girl.jpg"/><img src="./img/wear.jpg"/><img src="./img/girl.jpg"/><img src="./img/wear.jpg"/><img src="./img/girl.jpg"/></div>
+	<form class="form">
+		<div class="form-group">
+			<label for="lead_city">В каком Вы городе?</label>
+			<input class="group__form form-control" id="lead_city" type="name" placeholder="к примеру, Киев"/>
+		</div>
+		<div class="form-group"> 
+			<label for="lead_phone">Номер телефона</label>
+			<input class="group__input form-control" id="lead_phone" type="phone" placeholder="+38 123 456 7890"/>
+		</div>
+		<div class="delivery"> 
+			<label for="lead_delivery">Как желаете получить?</label>
+			<select class="group__select form-control" id="lead_delivery">
+				<option>Доставка Новой Почтой</option>
+				<option>Приеду в шоурум (г.Киев)</option>
+				<option>Пока не знаю. Жду звонка</option>
+			</select>
+		</div>
+		<p class="deliv">
+			Сразу после отправки заявки Вы окажетесь на странице определения размера.
+			Мы это сделали, чтобы вам было проще определиться точно с нужным размером, пока мы звоним вам.
+			Если вы не уверены в размере - мы поможем по телефону.
+		</p>
+	</form>
+	<button class="btn-lg btn-success" type="submit" style="margin-top: 10px;">Отправить заявку                                   </button><a class="close" title="Закрыть" href="#close"></a>
 </div>
