--- a/app/popup3.html
+++ b/app/popup3.html
@@ -1,9 +1,9 @@
 
 <div class="popup"> 
 	<div class="popup__wear">
-		<h3 class="title__name title__name_dark">Купальник San-Marino</h3>
+		<h3 class="title__name title__name_dark">Купальник Sunrise</h3>
 		<p class="section__description">Размеры: S, M, L </p>
-		<p class="section__description">Материал: Nylon, Spandex</p><img src="./img/wear1-1.png"/>
+		<p class="section__description">Материал: Nylon, Spandex</p><img src="./img/wear4-4.png"/>
 	</div>
 	<!--.fotorama(data-width="100%"     
 	 data-minwidth="320"
