--- a/app/popup.html
+++ b/app/popup.html
@@ -1,50 +1,52 @@
 
 <div class="popup"> 
 	<div class="popup__wear">
-		<h3 class="title__name title__name_dark">Купальник San-Marino</h3>
-		<p class="section__description">Размеры: S, M, L </p>
-		<p class="section__description">Материал: Nylon, Spandex</p><img src="./img/wear1-1.png"/>
+		<div class="popup__first">
+			<h3 class="title__name title__name_dark">Купальник San-Marino</h3>
+			<p class="section__description">Размеры: S, M, L </p>
+			<p class="section__description">Материал: Nylon, Spandex</p><img class="deliv__pic" src="./img/wear1-1.png"/>
+		</div>
+		<!--.fotorama(data-width="100%"     
+		data-minwidth="320"
+		data-maxwidth="820"
+		data-maxheight='300'     
+		data-allowfullscreen='native', data-nav='thumbs', data-loop='true', data-autoplay='true')
+		img(src='./img/girl.jpg')
+		img(src='./img/wear.jpg')
+		img(src='./img/girl.jpg')
+		img(src='./img/wear.jpg')
+		img(src='./img/girl.jpg')
+		img(src='./img/wear.jpg')
+		img(src='./img/girl.jpg')
+		img(src='./img/wear.jpg')
+		img(src='./img/girl.jpg')  
+		-->
+		<form class="form" id="form">
+			<div class="form-inputs">
+				<div class="form-group">
+					<label for="lead_city">В каком Вы городе?</label>
+					<input class="group__form form-control" id="lead_city" type="name" placeholder="к примеру, Киев"/>
+				</div>
+				<div class="form-group"> 
+					<label for="lead_phone">Номер телефона</label>
+					<input class="group__input form-control" id="lead_phone" type="phone" placeholder="+38 123 456 7890"/>
+				</div>
+			</div>
+			<div class="delivery"> 
+				<label for="lead_delivery">Как желаете получить?
+					<select class="group__select form-control" id="lead_delivery">
+						<option>Доставка Новой Почтой</option>
+						<option>Приеду в шоурум (г.Киев)</option>
+						<option>Пока не знаю. Жду звонка</option>
+					</select>
+				</label>
+			</div>
+			<p class="deliv">
+				Сразу после отправки заявки Вы окажетесь на странице определения размера.
+				Мы это сделали, чтобы вам было проще определиться точно с нужным размером, пока мы звоним вам.
+				Если вы не уверены в размере - мы поможем по телефону.
+			</p>
+			<button class="btn-lg btn-success" type="submit">Отправить заявку                                   </button><a class="close" title="Закрыть" href="#close"> </a>
+		</form>
 	</div>
-	<!--.fotorama(data-width="100%"     
-	 data-minwidth="320"
-	 data-maxwidth="820"
-	 data-maxheight='300'     
-	 data-allowfullscreen='native', data-nav='thumbs', data-loop='true', data-autoplay='true')
-	img(src='./img/girl.jpg')
-	img(src='./img/wear.jpg')
-	img(src='./img/girl.jpg')
-	img(src='./img/wear.jpg')
-	img(src='./img/girl.jpg')
-	img(src='./img/wear.jpg')
-	img(src='./img/girl.jpg')
-	img(src='./img/wear.jpg')
-	img(src='./img/girl.jpg')  
-	-->
-	<form class="form">
-		<div class="form-inputs">
-			<div class="form-group">
-				<label for="lead_city">В каком Вы городе?</label>
-				<input class="group__form form-control" id="lead_city" type="name" placeholder="к примеру, Киев"/>
-			</div>
-			<div class="form-group"> 
-				<label for="lead_phone">Номер телефона</label>
-				<input class="group__input form-control" id="lead_phone" type="phone" placeholder="+38 123 456 7890"/>
-			</div>
-		</div>
-		<div class="delivery"> 
-			<label for="lead_delivery">Как желаете получить?
-				<select class="group__select form-control" id="lead_delivery">
-					<option>Доставка Новой Почтой</option>
-					<option>Приеду в шоурум (г.Киев)</option>
-					<option>Пока не знаю. Жду звонка</option>
-				</select>
-			</label>
-		</div>
-		<p class="deliv">
-			Сразу после отправки заявки Вы окажетесь на странице определения размера.
-			Мы это сделали, чтобы вам было проще определиться точно с нужным размером, пока мы звоним вам.
-			Если вы не уверены в размере - мы поможем по телефону.
-		</p>
-		<button class="btn-lg btn-success" type="submit">Отправить заявку                                   </button><a class="close" title="Закрыть" href="#close"> </a>
-	</form>
 </div>
